hsmc-macros/tests/ui/t9_9_multiple_terminate.stderr
error: multiple `terminate` declarations
  --> tests/ui/t9_9_multiple_terminate.rs:13:5
   |
13 |     terminate(Halt);
   |     ^^^^^^^^^
